# TDA-CNN-Framework

./: CIFAR100_benchmark_tda_pure.py  CIFAR100_data_processing.py  README.md  classification_model.py  data_preprocessing_pipelines.py  full_dataset_processing_crossval.py  image_val_print.py  optuna_testing_script_crossval_tda.py  optuna_training_framework.py  pyproject.toml
.github/workflows/: azure-functions-app-python.yml
ARCHIVE/: PI_pipeline_processing_module.py  PI_pipeline_processing_module2.py  Processing_endpoint.py  analiza_czyste.ipynb  analiza_zaszumione.ipynb  data_preprocessing.py
algorithms/: .gitignore  CIFAR100_benchmark_raw.py  CIFAR100_benchmark_tda.py  README.md  cross_validation_objective.py  data_enrichment_pipelines.py  data_preprocessing_pipelines_FUNGI.py  full_dataset_processing.py  image_val.py  michal-test.py  optuna_testing_script.py  optuna_testing_script_crossval_raw.py  optuna_training_testscript.py  test_image_load.py
algorithms/.ipynb_checkpoints/: experiment-checkpoint.ipynb  experiment_driver-checkpoint.ipynb
algorithms/ARCHIVE/: MNIST_pipelines.py  MNIST_processing.py  RGB_Debug.py  cal_and_test.py  cal_and_test_noise.py  cal_and_test_optuna.py  cal_and_test_without_processing.py  experiment.ipynb  experiment_driver.ipynb  tda_pipelines.py  tda_pipelines_PCA.py
algorithms/experiments/: 2025-02-28_fungi_raw.py  2025-02-28_fungi_tda.py
algorithms/models/: SAR_models.py  fungi_model.py  raw_models.py  tda_models.py
